Add styles for article headings and paragraphs

--- a/style.css
+++ b/style.css
@@ -107,3 +107,17 @@ footer {
 
 footer .container {
   text-a
+
+  article h1 {
+  margin-top: 10px;
+}
+
+article h2 {
+  margin-top: 40px;
+  font-size: 24px;
+}
+
+article p {
+  margin-top: 18px;
+  font-size: 17px;
+}
